CSS Property finished

--- a/HTML&CSS/style.css
+++ b/HTML&CSS/style.css
@@ -1,31 +1,108 @@
 * {
    
-    color: rgb(48, 147, 142);
     font-style: normal;
     font-family: sans-serif;
     margin-left: 10px;
-    margin-right: 20px;
+    margin-right: 10px;
+    position: relative;
+}
+.container{
+    width: 800px;
+    height: 500px;
 }
 
 
-.main-header, nav {
+.main-header{
+    color: rgb(48, 147, 142);
     background-color: gainsboro;
     box-sizing: border-box;
+    height: 40px;
 }
 nav{
-    float: right;
+    position: absolute;
+    right: 0px;
     margin-top: -45px;
+    
 }
 
 nav a {
+    color: rgb(48, 147, 142);
     text-decoration: none;
     margin-right: 10px;
 }
 
 .title {
-    display: inline;
-    margin-left: 50px;
+    position: absolute;
+    margin-left: 10px;
     text-transform: uppercase;
-    margin-top: -50px;
+    margin-top: 30px;
+    color: rgb(48, 147, 142);
 }
+
+#author {
+    padding-top: 90px;
+}
+
+.paragraph{
+    box-sizing: border-box;
+    height: 500px;
+    width: 500px;
+}
+
+#author p{
+    position: absolute;
+    top: 110px;
+    left: 70px;
+    color: black;
+}
+
+img {
+    margin-top: 20px;
+    height: 200px;
+    width: 400px;
+}
+h3 {
+    text-align: center;
+    /* margin-bottom: -25px; */
+}
+
+aside{
+    box-sizing: border-box;
+    position: absolute;
+    top: 150px;
+    left: 550px;
+    background-color: lightgray;
+    border-top: 8px solid lightblue;
+    text-transform: none;
+    height: 430px;
+    width: 280px;
+    
+}
+aside ul{
+    margin-left: auto;
+    list-style-type: none;
+    padding-left: 0px;
+    
+}
+ul li a {
+    margin-left: -20px;
+    text-decoration: none;
+    color:rgb(48, 147, 142) ;
+    right: -10px;
+}
+aside strong{
+    display: block;
+    
+}
+
+footer{
+    margin-top: 50px;
+    margin-left: 20px;
+    box-sizing: border-box;
+    border-top:8px solid lightblue;
+}
+
+
+
+
 
