--- a/Base/07-Omnifood-Desktop/css/general.css
+++ b/Base/07-Omnifood-Desktop/css/general.css
@@ -26,8 +26,9 @@ Tints: #fdf2e9
 Shades:#cf711f
 Accent:
 Greys
+#6F6F6F (lightest grey allowed on #fdf2e9)
 #555
-
+#333
 --- 05 SHADOWS
 
 --- 06 BORDER-RADIUS
@@ -78,7 +79,7 @@ Greys
   }
 
   .heading-tertiary{
-    font-size: 3rem;
+    font-size: 2.4rem;
     line-height: 1.2;
     margin-bottom: 3.2rem;
   }
@@ -87,7 +88,7 @@ Greys
       color: #cf711f;
       display: block;
       font-weight: 500;
-      font-size: 1.6rem;
+      font-size: 1.2rem;
       text-transform: uppercase;
       margin-bottom: 1.6rem;
   }
@@ -102,7 +103,8 @@ Greys
     color: #fff;
     border-radius: 0.5rem;
   
-    transition: background-color 0.3s;
+    /* transition: background-color 0.3s; */
+    transition: all 0.3s;
   }
   
   .btn--full:link,
@@ -127,6 +129,24 @@ Greys
   
     box-shadow: inset 0 0 0 0.1rem #fff;
   }
+
+  .link:link,
+  .link:visited{
+    display: inline-block;
+    text-decoration: none;
+    color: #e67e22;
+    font-size: 2rem;
+    border-bottom: 1px solid currentColor;
+    padding: 2;
+    transition: all 0.3s;
+    margin-bottom: 3.2rem;
+  }
+
+  .link:active,
+  .link:hover{
+    color: #cf711f;
+    border-bottom: 1px solid transparent;
+  }
   
   .margin-right-sm {
     margin-right: 1.6rem !important;
@@ -144,8 +164,19 @@ Greys
     display: grid;
     column-gap: 6.4rem;
     gap: 9.6rem;
+
+    /* margin-bottom: 9.6rem; */
   }
-  
+
+  /* .grid:last-child{
+    margin-bottom: 0;
+  }
+   */
+
+  .grid:not(:last-child){
+    margin-bottom: 9.6rem;
+  }
+
   .grid--2-cols {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -154,6 +185,10 @@ Greys
     grid-template-columns: repeat(3, 1fr);
   }
   
+  .grid--4-cols {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
   .grid--center-v{
     align-items: center;
   }
@@ -217,3 +252,14 @@ Greys
     background-color: #cf711f;
   }
   
+  .margin-bottom-md{
+    margin-bottom: 4.8rem !important;
+  }
+
+  .center-text{
+    text-align: center;
+  }
+
+  strong{
+    font-weight: 500;
+  }
