--- a/Base/07-Omnifood-Desktop/css/style.css
+++ b/Base/07-Omnifood-Desktop/css/style.css
@@ -146,3 +146,257 @@
 .step-img{
     width: 35%;
 } 
+
+/***********************/
+/* HOW IT WORKS SECTION*/
+/***********************/
+
+.section-meals {
+  padding: 9.6rem 0;
+}
+
+.meal{
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.095);
+  border-radius: 11px;
+  overflow: hidden;
+  transition: all 0.4s;
+}
+
+.meal:hover{
+  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.095);
+  transform: translateY(-2rem);
+}
+
+.meal-content{
+  padding: 3.2rem 3.2rem 4.8rem 3.2rem;
+}
+
+.meal-tags{
+  display: flex;
+  gap: 0.4rem;
+}
+
+.tag{
+  display: inline-block;
+  background-color: #51cf66;
+  border-radius: 100px;
+  text-transform: uppercase;
+  color: #333;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 1.2rem;
+  padding: 0.4rem 0.8rem;
+}
+
+.tag--vegetarian {
+  background-color: #51cf66;
+}
+
+.tag--vegan {
+  background-color: #94d82d;
+}
+
+.tag--paleo {
+  background-color: #ffd43b;
+}
+
+.meal-title{
+  font-size: 2.2rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 2.4rem;
+  text-align: left;
+}
+
+.meal-attributes{
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.meal-attribute{
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.meal-icon{
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #e67e22;
+}
+
+.meal-img{
+  width: 100%;
+  font-weight: 500;
+}
+
+.list{
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.list-item{
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.list-icon{
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #e67e22;
+}
+
+.all-recipes{
+  text-align: center;
+}
+
+/***********************/
+/* TESTIMONIAL SECTION*/
+/***********************/
+
+.section-testimonials {
+  background-color: #fdf2e9;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.testimonial-container{
+  padding: 9.6rem;
+}
+
+.testimonials{
+  display: grid;
+  grid-template-columns: 55fr 45fr;
+  row-gap: 4.6rem;
+  column-gap: 8rem;
+}
+
+.testimonials-img{
+  width: 4.6rem;
+  border-radius: 50%;
+  margin-bottom: 1.2rem;
+}
+
+.testimonials-text{
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 1.6rem;
+}
+
+.testimonial-name{
+  font-size: 1.8rem;
+  color: #6F6F6F;
+}
+
+.gallery{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.6rem;
+}
+
+.gallery-item{
+  overflow: hidden;
+}
+
+.gallery-item img{
+  display: block;
+  width: 100%;
+  transition: all 0.4s;
+}
+
+.gallery-item img:hover{
+  transform: scale(1.1);
+}
+
+
+/***********************/
+/* MEALS SECTION*/
+/***********************/
+
+.section-pricing{
+  padding: 9.6rem 0;
+}
+
+.pricing-plan {
+  width: 75%;
+  border-radius: 11px;
+  padding: 4.8rem;
+}
+
+.pricing-plan--starter{
+  justify-self: end;
+  border: 2px solid #fdf2e9;
+}
+
+.pricing-plan--complete{
+  background-color: #fdf2e9;
+  position: relative;
+  overflow: hidden;
+}
+
+.pricing-plan--complete::after{
+  content: "Best Value";
+  position: absolute;
+  top: 2rem;
+  right: -4.8rem;
+
+  background-color: #ffd43b;
+  color: #333;
+  font-weight: 700;
+  padding: 0.4rem 4.8rem;
+  transform: rotate(45deg);
+}
+
+.plan-header{
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+
+.plan-name{
+  display: block;
+  color: #cf711f;
+  font-size: 1.8rem;
+  font-weight: 600;
+  margin-bottom: 3.2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.9;
+}
+
+.plan-price{
+  font-size: 4.6rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 1.8rem;
+  text-align: center;
+}
+
+.plan-price span{
+  font-size: 2.2rem;
+  margin-right: 0.5rem;
+}
+
+.plan-text{
+  font-size: 1.6rem;
+  line-height: 1.2;
+  color: #6F6F6F;
+}
+
+.list-item span, .list-icon {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  letter-spacing: 1.2;
+  margin-left: 0.8rem;
+  font-weight: 400;
+}
+
+.plan-sign-up{
+  text-align: center;
+  margin-top: 4.8rem;
+}
