--- a/Base/07-Omnifood-Desktop/css/style.css
+++ b/Base/07-Omnifood-Desktop/css/style.css
@@ -400,3 +400,78 @@
   text-align: center;
   margin-top: 4.8rem;
 }
+
+.plan-details{
+  text-align: center;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+
+.feature-icon{
+  color: #e67e22;
+  width: 3.2rem;
+  height: 3.2rem;
+  padding: 1.6rem;
+  margin-bottom: 3.2rem;
+  background-color: #fae5d3;
+  border-radius: 50%;
+}
+
+.feature-title{
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 700;
+  margin-bottom: 1.6rem;
+}
+
+.feature-text{
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+
+/***********************/
+/* CTA SECTION*/
+/***********************/
+
+.section-cta{
+  margin-bottom: 9.6rem;
+}
+
+.cta{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  /* background-color: #cf711f; */
+  box-shadow: 0 2.4rem 4.8rem, rgba(0,0,0, 0.8);
+  border-radius: 11px;
+  background-image: linear-gradient(to right bottom, 
+  #eb984e, #e67e22);
+  overflow: hidden;
+
+  height: 50rem;
+
+} 
+
+.cta .heading-secondary{
+  color: #45260a;
+  margin-bottom: 3.2rem;
+}
+
+
+.cta-text-box{
+  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+}
+
+.cta-text-box {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+.cta-img-box{
+  background-image: linear-gradient(to right bottom,
+  rgba(235, 151, 78, 0.30),
+  rgba(230,125, 34, 0.30)), 
+  url(../img/eating.jpg);
+
+  background-size: cover;
+  background-position: center;
+}
