CTA Function of our website is done

--- a/Base/07-Omnifood-Desktop/css/style.css
+++ b/Base/07-Omnifood-Desktop/css/style.css
@@ -1,4 +1,3 @@
-
 /***********************/
 /* HERO SECTION */
 /***********************/
@@ -64,11 +63,11 @@
 /* FEATURED IN SECTION */
 /***********************/
 
-.section-feature{
+.section-feature {
   padding: 4.8rem 0 3.2rem 0;
 }
 
-.heading-featured-in{
+.heading-featured-in {
   text-align: center;
   font-size: 1.4rem;
   text-transform: uppercase;
@@ -78,16 +77,15 @@
   color: #666;
 }
 
-.logos{
+.logos {
   display: flex;
   justify-content: space-around;
 }
 
-.logos img{
+.logos img {
   height: 3.2rem;
   filter: brightness(0);
   opacity: 60%;
-
 }
 
 /***********************/
@@ -98,19 +96,19 @@
   padding: 9.6rem 0;
 }
 
-.step-number{
-    font-size: 8.6rem;
-    font-weight: 600;
-    color: #ddd;
-    margin-bottom: 1.2rem;
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
 }
 
-.step-description{
+.step-description {
   font-size: 1.8rem;
   line-height: 1.8;
 }
 
-.step-img-box{
+.step-img-box {
   position: relative;
   display: flex;
   align-items: center;
@@ -118,8 +116,8 @@
 }
 
 .step-img-box::before,
-.step-img-box::after{
-  content:"";
+.step-img-box::after {
+  content: "";
   display: block;
   position: absolute;
   top: 50%;
@@ -128,7 +126,7 @@
   transform: translate(-50%, -50%);
 }
 
-.step-img-box::before{
+.step-img-box::before {
   width: 60%;
   /* height: 60%; */
   padding-bottom: 60%;
@@ -136,16 +134,16 @@
   z-index: -2;
 }
 
-.step-img-box::after{
+.step-img-box::after {
   width: 45%;
   padding-bottom: 45%;
   background-color: #fae5d3;
   z-index: -1;
 }
 
-.step-img{
-    width: 35%;
-} 
+.step-img {
+  width: 35%;
+}
 
 /***********************/
 /* HOW IT WORKS SECTION*/
@@ -155,28 +153,28 @@
   padding: 9.6rem 0;
 }
 
-.meal{
+.meal {
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.095);
   border-radius: 11px;
   overflow: hidden;
   transition: all 0.4s;
 }
 
-.meal:hover{
+.meal:hover {
   box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.095);
   transform: translateY(-2rem);
 }
 
-.meal-content{
+.meal-content {
   padding: 3.2rem 3.2rem 4.8rem 3.2rem;
 }
 
-.meal-tags{
+.meal-tags {
   display: flex;
   gap: 0.4rem;
 }
 
-.tag{
+.tag {
   display: inline-block;
   background-color: #51cf66;
   border-radius: 100px;
@@ -200,7 +198,7 @@
   background-color: #ffd43b;
 }
 
-.meal-title{
+.meal-title {
   font-size: 2.2rem;
   font-weight: 600;
   color: #333;
@@ -208,52 +206,52 @@
   text-align: left;
 }
 
-.meal-attributes{
+.meal-attributes {
   list-style: none;
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
 
-.meal-attribute{
+.meal-attribute {
   font-size: 1.8rem;
   display: flex;
   align-items: center;
   gap: 1.6rem;
 }
 
-.meal-icon{
+.meal-icon {
   height: 2.4rem;
   width: 2.4rem;
   color: #e67e22;
 }
 
-.meal-img{
+.meal-img {
   width: 100%;
   font-weight: 500;
 }
 
-.list{
+.list {
   list-style: none;
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
 }
 
-.list-item{
+.list-item {
   font-size: 1.8rem;
   display: flex;
   align-items: center;
   gap: 1.6rem;
 }
 
-.list-icon{
+.list-icon {
   height: 2.4rem;
   width: 2.4rem;
   color: #e67e22;
 }
 
-.all-recipes{
+.all-recipes {
   text-align: center;
 }
 
@@ -267,60 +265,59 @@
   grid-template-columns: 1fr 1fr;
 }
 
-.testimonial-container{
+.testimonial-container {
   padding: 9.6rem;
 }
 
-.testimonials{
+.testimonials {
   display: grid;
   grid-template-columns: 55fr 45fr;
   row-gap: 4.6rem;
   column-gap: 8rem;
 }
 
-.testimonials-img{
+.testimonials-img {
   width: 4.6rem;
   border-radius: 50%;
   margin-bottom: 1.2rem;
 }
 
-.testimonials-text{
+.testimonials-text {
   font-size: 1.8rem;
   line-height: 1.8;
   margin-bottom: 1.6rem;
 }
 
-.testimonial-name{
+.testimonial-name {
   font-size: 1.8rem;
-  color: #6F6F6F;
+  color: #6f6f6f;
 }
 
-.gallery{
+.gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1.6rem;
 }
 
-.gallery-item{
+.gallery-item {
   overflow: hidden;
 }
 
-.gallery-item img{
+.gallery-item img {
   display: block;
   width: 100%;
   transition: all 0.4s;
 }
 
-.gallery-item img:hover{
+.gallery-item img:hover {
   transform: scale(1.1);
 }
-
 
 /***********************/
 /* MEALS SECTION*/
 /***********************/
 
-.section-pricing{
+.section-pricing {
   padding: 9.6rem 0;
 }
 
@@ -330,18 +327,18 @@
   padding: 4.8rem;
 }
 
-.pricing-plan--starter{
+.pricing-plan--starter {
   justify-self: end;
   border: 2px solid #fdf2e9;
 }
 
-.pricing-plan--complete{
+.pricing-plan--complete {
   background-color: #fdf2e9;
   position: relative;
   overflow: hidden;
 }
 
-.pricing-plan--complete::after{
+.pricing-plan--complete::after {
   content: "Best Value";
   position: absolute;
   top: 2rem;
@@ -354,12 +351,12 @@
   transform: rotate(45deg);
 }
 
-.plan-header{
+.plan-header {
   text-align: center;
   margin-bottom: 4.8rem;
 }
 
-.plan-name{
+.plan-name {
   display: block;
   color: #cf711f;
   font-size: 1.8rem;
@@ -369,7 +366,7 @@
   letter-spacing: 0.9;
 }
 
-.plan-price{
+.plan-price {
   font-size: 4.6rem;
   font-weight: 600;
   color: #333;
@@ -377,18 +374,19 @@
   text-align: center;
 }
 
-.plan-price span{
+.plan-price span {
   font-size: 2.2rem;
   margin-right: 0.5rem;
 }
 
-.plan-text{
+.plan-text {
   font-size: 1.6rem;
   line-height: 1.2;
-  color: #6F6F6F;
+  color: #6f6f6f;
 }
 
-.list-item span, .list-icon {
+.list-item span,
+.list-icon {
   font-size: 1.6rem;
   line-height: 1.6;
   letter-spacing: 1.2;
@@ -396,18 +394,18 @@
   font-weight: 400;
 }
 
-.plan-sign-up{
+.plan-sign-up {
   text-align: center;
   margin-top: 4.8rem;
 }
 
-.plan-details{
+.plan-details {
   text-align: center;
   font-size: 1.6rem;
   line-height: 1.6;
 }
 
-.feature-icon{
+.feature-icon {
   color: #e67e22;
   width: 3.2rem;
   height: 3.2rem;
@@ -417,14 +415,14 @@
   border-radius: 50%;
 }
 
-.feature-title{
+.feature-title {
   font-size: 2.4rem;
   color: #333;
   font-weight: 700;
   margin-bottom: 1.6rem;
 }
 
-.feature-text{
+.feature-text {
   font-size: 1.6rem;
   line-height: 1.6;
 }
@@ -433,31 +431,28 @@
 /* CTA SECTION*/
 /***********************/
 
-.section-cta{
+.section-cta {
   margin-bottom: 9.6rem;
 }
 
-.cta{
+.cta {
   display: grid;
   grid-template-columns: 2fr 1fr;
   /* background-color: #cf711f; */
-  box-shadow: 0 2.4rem 4.8rem, rgba(0,0,0, 0.8);
+  box-shadow: 0 2.4rem 4.8rem, rgba(0, 0, 0, 0.8);
   border-radius: 11px;
-  background-image: linear-gradient(to right bottom, 
-  #eb984e, #e67e22);
+  background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
   overflow: hidden;
 
   height: 50rem;
+}
 
-} 
-
-.cta .heading-secondary{
+.cta .heading-secondary {
   color: #45260a;
   margin-bottom: 3.2rem;
 }
 
-
-.cta-text-box{
+.cta-text-box {
   padding: 4.8rem 6.4rem 6.4rem 6.4rem;
 }
 
@@ -466,12 +461,52 @@
   line-height: 1.8;
 }
 
-.cta-img-box{
-  background-image: linear-gradient(to right bottom,
-  rgba(235, 151, 78, 0.30),
-  rgba(230,125, 34, 0.30)), 
-  url(../img/eating.jpg);
+.cta-text {
+  margin-bottom: 3.4rem;
+}
+
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(235, 151, 78, 0.3),
+      rgba(230, 125, 34, 0.3)
+    ),
+    url(../img/eating.jpg);
 
   background-size: cover;
   background-position: center;
+}
+
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
+
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+}
+
+.cta-form input,
+.cta-form select {
+  padding: 1.2rem;
+  border-radius: 6px;
+  border: none;
+  width: 100%;
+  color: #333;
+  color: inherit;
+  font-family: inherit;
+}
+
+.cta-form input::placeholder {
+  color: #a87953;
+}
+
+.cta *:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22;
+  outline-offset: 8px; */
+  box-shadow: 0 0 0 0.3rem rgba(253, 242, 233, 0.5);
 }
