--- a/Base/07-Omnifood-Desktop/css/general.css
+++ b/Base/07-Omnifood-Desktop/css/general.css
@@ -44,222 +44,243 @@ Greys
 /* BODY ELEMENS */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  html {
-    font-size: 62.5%;
-  }
-  
-  body {
-    font-family: "Rubik", sans-serif;
-    font-weight: 400;
-    color: #555;
-  }
-  
-  .heading-primary,
-  .heading-secondary{
-      font-size: 5.2rem;
-      font-weight: 700;
-      line-height: 1.05;
-      color: #333;
-      letter-spacing: -0.5px;
-  }
-  
-  .heading-primary {
-    margin-bottom: 3.2rem;
-  }
-  
-  .heading-secondary{
-      font-size: 4.4rem;
-      line-height: 1.2;
-      margin-bottom: 9.6rem;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  .heading-tertiary{
-    font-size: 2.4rem;
-    line-height: 1.2;
-    margin-bottom: 3.2rem;
-  }
-  
-  .subheading{
-      color: #cf711f;
-      display: block;
-      font-weight: 500;
-      font-size: 1.2rem;
-      text-transform: uppercase;
-      margin-bottom: 1.6rem;
-  }
-  
-  .btn:link,
-  .btn:visited {
-    display: inline-block;
-    padding: 1.6rem 3.2rem;
-    font-size: 2rem;
-    font-weight: 600;
-    text-decoration: none;
-    color: #fff;
-    border-radius: 0.5rem;
-  
-    /* transition: background-color 0.3s; */
-    transition: all 0.3s;
-  }
-  
-  .btn--full:link,
-  .btn--full:visited {
-    background-color: #e67e22;
-  }
-  
-  .btn--full:hover,
-  .btn--full:active {
-    background-color: #cf711f;
-  }
-  
-  .btn--outline:link,
-  .btn--outline:visited {
-    background-color: #fff;
-    color: #555;
-  }
-  
-  .btn--outline:hover,
-  .btn--outline:active {
-    background-color: #fdf2e9;
-  
-    box-shadow: inset 0 0 0 0.1rem #fff;
-  }
+html {
+  font-size: 62.5%;
+}
 
-  .link:link,
-  .link:visited{
-    display: inline-block;
-    text-decoration: none;
-    color: #e67e22;
-    font-size: 2rem;
-    border-bottom: 1px solid currentColor;
-    padding: 2;
-    transition: all 0.3s;
-    margin-bottom: 3.2rem;
-  }
+body {
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  color: #555;
+}
 
-  .link:active,
-  .link:hover{
-    color: #cf711f;
-    border-bottom: 1px solid transparent;
-  }
-  
-  .margin-right-sm {
-    margin-right: 1.6rem !important;
-  }
-  
-  /* GRID */
-  
-  .container {
-    max-width: 120rem;
-    padding: 0 3.2rem;
-    margin: 0 auto;
-  }
-  
-  .grid {
-    display: grid;
-    column-gap: 6.4rem;
-    gap: 9.6rem;
+.heading-primary,
+.heading-secondary {
+  font-size: 5.2rem;
+  font-weight: 700;
+  line-height: 1.05;
+  color: #333;
+  letter-spacing: -0.5px;
+}
 
-    /* margin-bottom: 9.6rem; */
-  }
+.heading-primary {
+  margin-bottom: 3.2rem;
+}
 
-  /* .grid:last-child{
+.heading-secondary {
+  font-size: 4.4rem;
+  line-height: 1.2;
+  margin-bottom: 9.6rem;
+}
+
+.heading-tertiary {
+  font-size: 2.4rem;
+  line-height: 1.2;
+  margin-bottom: 3.2rem;
+}
+
+.subheading {
+  color: #cf711f;
+  display: block;
+  font-weight: 500;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+}
+
+.btn,
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  padding: 1.6rem 3.2rem;
+  font-size: 2rem;
+  font-weight: 600;
+  text-decoration: none;
+  color: #fff;
+  border-radius: 0.5rem;
+
+  /* transition: background-color 0.3s; */
+  transition: all 0.3s;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1rem;
+  font-size: 1.6rem;
+}
+
+*:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22;
+  outline-offset: 8px; */
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
+  /* border: none; */
+}
+
+.btn--full:link,
+.btn--full:visited {
+  background-color: #e67e22;
+}
+
+.btn--full:hover,
+.btn--full:active {
+  background-color: #cf711f;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+  background-color: #fff;
+  color: #555;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+  background-color: #fdf2e9;
+
+  box-shadow: inset 0 0 0 0.1rem #fff;
+}
+
+.link:link,
+.link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #e67e22;
+  font-size: 2rem;
+  border-bottom: 1px solid currentColor;
+  padding: 2;
+  transition: all 0.3s;
+  margin-bottom: 3.2rem;
+}
+
+.link:active,
+.link:hover {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
+
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+/* GRID */
+
+.container {
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+
+.grid {
+  display: grid;
+  column-gap: 6.4rem;
+  gap: 9.6rem;
+
+  /* margin-bottom: 9.6rem; */
+}
+
+/* .grid:last-child{
     margin-bottom: 0;
   }
    */
 
-  .grid:not(:last-child){
-    margin-bottom: 9.6rem;
-  }
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
+}
 
-  .grid--2-cols {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  
-  .grid--3-cols {
-    grid-template-columns: repeat(3, 1fr);
-  }
-  
-  .grid--4-cols {
-    grid-template-columns: repeat(4, 1fr);
-  }
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
 
-  .grid--center-v{
-    align-items: center;
-  }
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
 
+.grid--4-cols {
+  grid-template-columns: repeat(4, 1fr);
+}
 
-  /***********************/
-  /* HEADER */
-  /***********************/
-  
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fdf2e9;
-    padding: 6.4rem;
-  }
-  
-  .logo {
-    height: 2.4rem;
-    width: 9.6rem;
-  }
-  
-  .main-nav-list {
-    display: flex;
-    align-items: center;
-    gap: 2.2rem;
-    list-style-type: none;
-  }
-  
-  .main-nav-link {
-    font-size: 1.2rem;
-    text-decoration: none;
-  }
-  
-  .main-nav-link:link,
-  .main-nav-link:visited {
-    background-color: #e67e22;
-    color: #fff;
-    border-radius: 0.33rem;
-    font-weight: 500;
-    font-size: 1.6rem;
-    padding: 1.2rem 2.4rem;
-    transition: all 0.3s;
-  }
-  
-  .main-nav-link:active,
-  .main-nav-link:hover {
-    background-color: #cf711f;
-  }
-  
-  .nav-cta:link,
-  .nav-cta:visited {
-    color: #fff;
-    padding: 1.2rem 2.4rem;
-    background-color: #e67e22;
-    border-radius: 0.33rem;
-  }
-  
-  .main-nav-link.nav-cta:active,
-  .main-nav-link.nav-cta:hover {
-    background-color: #cf711f;
-  }
-  
-  .margin-bottom-md{
-    margin-bottom: 4.8rem !important;
-  }
+.grid--center-v {
+  align-items: center;
+}
 
-  .center-text{
-    text-align: center;
-  }
+/***********************/
+/* HEADER */
+/***********************/
 
-  strong{
-    font-weight: 500;
-  }
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+  padding: 6.4rem;
+}
+
+.logo {
+  height: 2.4rem;
+  width: 9.6rem;
+}
+
+.main-nav-list {
+  display: flex;
+  align-items: center;
+  gap: 2.2rem;
+  list-style-type: none;
+}
+
+.main-nav-link {
+  font-size: 1.2rem;
+  text-decoration: none;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  background-color: #e67e22;
+  color: #fff;
+  border-radius: 0.33rem;
+  font-weight: 500;
+  font-size: 1.6rem;
+  padding: 1.2rem 2.4rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:active,
+.main-nav-link:hover {
+  background-color: #cf711f;
+}
+
+.nav-cta:link,
+.nav-cta:visited {
+  color: #fff;
+  padding: 1.2rem 2.4rem;
+  background-color: #e67e22;
+  border-radius: 0.33rem;
+}
+
+.main-nav-link.nav-cta:active,
+.main-nav-link.nav-cta:hover {
+  background-color: #cf711f;
+}
+
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+  text-align: center;
+}
+
+strong {
+  font-weight: 500;
+}
