--- a/Base/07-Omnifood-Desktop/css/general.css
+++ b/Base/07-Omnifood-Desktop/css/general.css
@@ -76,6 +76,7 @@ body {
   font-size: 4.4rem;
   line-height: 1.2;
   margin-bottom: 9.6rem;
+  text-align: left;
 }
 
 .heading-tertiary {
@@ -91,6 +92,7 @@ body {
   font-size: 1.2rem;
   text-transform: uppercase;
   margin-bottom: 1.6rem;
+  text-align: left;
 }
 
 .btn,
@@ -250,24 +252,26 @@ body {
 
 .main-nav-link:link,
 .main-nav-link:visited {
-  background-color: #e67e22;
-  color: #fff;
+  /* background-color: #e67e22; */
+  /* color: #fff; */
+  color: #333;
   border-radius: 0.33rem;
   font-weight: 500;
   font-size: 1.6rem;
-  padding: 1rem 2.4rem;
+  padding: 1rem 2rem;
   transition: all 0.3s;
 }
 
 .main-nav-link:active,
 .main-nav-link:hover {
-  background-color: #cf711f;
+  /* background-color: #cf711f; */
+  color: #cf711f;
 }
 
 .nav-cta:link,
 .nav-cta:visited {
   color: #fff;
-  padding: 1.2rem 2.4rem;
+  padding: 1rem 2.6rem;
   background-color: #e67e22;
   border-radius: 0.33rem;
 }
