--- a/Base/07-Omnifood-Desktop/css/style.css
+++ b/Base/07-Omnifood-Desktop/css/style.css
@@ -446,7 +446,6 @@
   background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
   overflow: hidden;
 
-  height: 50rem;
 }
 
 .cta .heading-secondary {
@@ -524,7 +523,9 @@
 
 .footer--grid {
   display: grid;
-  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+  grid-template-columns: 1.5fr 1.5fr 1.2fr 1.3fr 1.3fr;
+  /* justify-content: center; */
+  align-items: start;
 }
 
 .social-links {
@@ -536,27 +537,29 @@
 }
 
 .footer-icon {
-  margin-top: 1.6rem;
+  margin-top: 1.8rem;
   width: 2rem;
   height: 2rem;
   color: #e67e22;
+  margin-bottom: 1.6rem;
 }
 
 .logo-col .copyright {
-  line-height: 1.6rem;
-  font-size: 1.2rem;
+  line-height: 1.8rem;
+  font-size: 1.6rem;
   font-family: inherit;
-  color: #4e4c4c;
+  color: #767676;
 }
 
 .contacts {
   font-style: normal;
-  font-size: 1.6rem;
+  font-size: 2rem;
   line-height: 1.6;
 }
 
 .address {
   margin-bottom: 2.4rem;
+  color:#767676;
 }
 
 .contacts .address {
@@ -567,12 +570,13 @@
 .footer-link:link,
 .footer-link:visited {
   text-decoration: none;
-  color: #4e4c4c;
+  color: #767676;
   font-size: 1.4rem;
+  margin-bottom: 1.2rem;
 }
 
 .footer-heading {
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-weight: 500;
   line-height: 1.6;
   margin-bottom: 2.4rem;
@@ -583,11 +587,11 @@
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
-  line-height: 1.6rem;
-  font-size: 1.2rem;
+  line-height: 1.8rem;
+  font-size: 1.4rem;
 }
 
 .footer-nav a {
   text-decoration: none;
-  color: #4e4c4c;
+  color: #767676;
 }
