--- a/Base/07-Omnifood-Desktop/css/general.css
+++ b/Base/07-Omnifood-Desktop/css/general.css
@@ -51,12 +51,15 @@ Greys
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Rubik", sans-serif;
   font-weight: 400;
   color: #555;
+
+  overflow-x: hidden;
 }
 
 .heading-primary,
@@ -141,6 +144,10 @@ body {
   background-color: #cf711f;
 }
 
+.btn--outline{
+  margin-left: 0.2rem;
+}
+
 .btn--outline:link,
 .btn--outline:visited {
   background-color: #fff;
@@ -161,7 +168,7 @@ body {
   color: #e67e22;
   font-size: 2rem;
   border-bottom: 1px solid currentColor;
-  padding: 2;
+  padding: 2rem;
   transition: all 0.3s;
   margin-bottom: 3.2rem;
 }
@@ -179,7 +186,7 @@ body {
 /* GRID */
 
 .container {
-  max-width: 120rem;
+  max-width: 130rem;
   padding: 0 3.2rem;
   margin: 0 auto;
 }
@@ -280,6 +287,26 @@ body {
 .main-nav-link.nav-cta:active,
 .main-nav-link.nav-cta:hover {
   background-color: #cf711f;
+}
+
+/* MOBILE */
+
+.btn-mobile-nav{
+  border: none ;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav{
+  width: 4.8rem;
+  height: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"]{
+  display: none;
 }
 
 .margin-bottom-md {
