--- a/Base/07-Omnifood-Desktop/css/style.css
+++ b/Base/07-Omnifood-Desktop/css/style.css
@@ -13,8 +13,9 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 9.6rem;
-  padding: 0 3.2rem;
+  padding: 0 3.4rem;
   align-items: center;
+  justify-content: center;
 }
 
 .hero-description {
@@ -31,7 +32,7 @@
   margin-top: 4.8rem;
   display: flex;
   align-items: center;
-  gap: 1.6rem;
+  gap: 1.2rem;
 }
 
 .delivered-imgs {
@@ -43,7 +44,7 @@
   width: 4.8rem;
   border-radius: 50%;
   border: 3px solid #fff;
-  margin-right: -1.6rem;
+  margin-right: -2rem;
 }
 
 .delivered-imgs img:last-child {
@@ -148,7 +149,7 @@
 }
 
 /***********************/
-/* HOW IT WORKS SECTION*/
+/* MEALS SECTION*/
 /***********************/
 
 .section-meals {
@@ -265,10 +266,11 @@
   background-color: #fdf2e9;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  align-items: center;
 }
 
 .testimonial-container {
-  padding: 9.6rem;
+  padding: 8rem;
 }
 
 .testimonials {
