--- a/Base/07-Omnifood-Desktop/css/general.css
+++ b/Base/07-Omnifood-Desktop/css/general.css
@@ -52,6 +52,8 @@ Greys
 html {
   font-size: 62.5%;
   overflow-x: hidden;
+
+  /* scroll-behavior: smooth; */
 }
 
 body {
@@ -60,6 +62,7 @@ body {
   color: #555;
 
   overflow-x: hidden;
+  /* scroll-behavior: smooth; */
 }
 
 .heading-primary,
@@ -238,6 +241,7 @@ body {
   align-items: center;
   background-color: #fdf2e9;
   padding: 5.6rem;
+  position: relative;
 }
 
 .logo {
@@ -250,7 +254,7 @@ body {
   display: flex;
   align-items: center;
   gap: 2.2rem;
-  list-style-type: none;
+  list-style: none;
 }
 
 .main-nav-link {
