--- a/Base/07-Omnifood-Desktop/css/queries.css
+++ b/Base/07-Omnifood-Desktop/css/queries.css
@@ -208,6 +208,7 @@
       /* MOBILE NAVIGATION */
       .btn-mobile-nav {
         display: block;
+        z-index: 9999;
      }
 
      .main-nav{
