--- a/Base/07-Omnifood-Desktop/css/queries.css
+++ b/Base/07-Omnifood-Desktop/css/queries.css
@@ -172,6 +172,25 @@
         margin-top: 3.6rem;
     }
 
+    /* MOBILE NAVIGATION */
+    .sticky .header{
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        height: 8rem;
+        padding-top: 0;
+        padding-bottom: 0;
+        background-color: rgba(255,255,255, 0.97);
+        z-index: 11;
+
+        box-shadow: 0 1.2rem 3.2rem rgba(0,0,0,0.03);
+    }
+
+    .section-hero{
+        margin-top: 9.6rem;
+    }
+
 }
 
 @media (max-width:40em){
